8320760: [Lilliput] Implement compact identity hashcode
Reviewed-by: stuefe